--- a/Using_LIO_maps.Rmd
+++ b/Using_LIO_maps.Rmd
@@ -97,3 +97,21 @@ r.arc <- arc.raster(r.obj, extent = extent(Blagdon))
 ```
 
 
+```{r}
+mylake <- brick("lakeontario.tif")
+
+gfsgn <- read.csv("gfsgn_sites.csv")
+gfsgn <- gfsgn %>% filter(!is.na(LAT))
+gn_points <- st_as_sf(gfsgn,                         
+           coords = c("LON", "LAT"),
+           crs = "+proj=longlat +datum=WGS84 +no_defs +ellps=WGS84 +towgs84=0,0,0")
+
+
+# Make sure crs is the same as my base layer
+gn_points <- st_transform(gn_points, mycrs)
+ggRGB(mylake, r = 1, g = 2, b = 3) +
+  geom_sf(data = gn_points) +
+  theme_void(base_size = 15) +
+  theme(legend.position = c(0.8, 0.8))
+```
+
