--- a/Using_LIO_maps.Rmd
+++ b/Using_LIO_maps.Rmd
@@ -115,3 +115,6 @@ ggRGB(mylake, r = 1, g = 2, b = 3) +
   theme(legend.position = c(0.8, 0.8))
 ```
 
+```{r}
+# Best places in Bruce County
+BC <- ("BruceCounty.tif")
