completed parts 1-3 of the assignment

--- a/Using_LIO_maps.Rmd
+++ b/Using_LIO_maps.Rmd
@@ -43,6 +43,8 @@ my_points <- st_as_sf(my_points,
            coords = c("longitude", "latitude"),
            crs = "+proj=longlat +datum=WGS84 +no_defs +ellps=WGS84 +towgs84=0,0,0")
 
+area_of_interest <- st_buffer(st_as_sfc(st_bbox(dplyr::filter(my_points, value != "satisfactory"))), 250)
+
 # Make sure crs is the same as my base layer
 my_points <- st_transform(my_points, mycrs)
 ```
@@ -51,7 +53,10 @@ my_points <- st_transform(my_points, mycrs)
 ```{r}
 # map in a ggplot2 framework
 ggRGB(basemap, r = 1, g = 2, b = 3) +
-  geom_sf(data = my_points, aes(color = value), size = 5) +
+  geom_sf(data = my_points, aes(fill = value), size = 5, shape = 21) +
+  scale_fill_manual(values = c("mediumorchid3", "deeppink3", "dodgerblue4"), 
+                    breaks = c("best", "good", "satisfactory"), name = "Rating")+
+  geom_sf(data = area_of_interest, fill = NA, colour = "orange", size = 2)+
   theme_void(base_size = 15) +
   theme(legend.position = c(0.8, 0.8))
 ```
@@ -135,3 +140,29 @@ ggRGB(crop_mylake, r = 1, g = 2, b = 3) +
 # Best places in Bruce County
 BC <- ("BruceCounty.tif")
 ```
+
+```{r rachels-map}
+
+# borrow the Bruce County base map
+bruce_map <- brick(BC)
+bruce_crs <- st_crs(bruce_map)
+
+# list of places Rachel has gone camping:
+camping <- tibble(latitude = c(45.23090243980543, 44.41411829694316, 44.53774239289965, 43.24856359980997, 44.29964881461152),
+                    longitude = c(-81.52241785248054, -81.45530851742954, -80.35132345391561, -81.82370140476118, -81.58808660209003),
+                    park = c("bruce_peninsula", "macgregor_point", "craigleith", "pinery", "inverhuron"),
+                    park_type = c("national", "provincial", "provincial", "provincial", "provincial")) %>% 
+    st_as_sf(coords = c("longitude", "latitude")) %>%
+  st_set_crs(bruce_crs)
+
+# plot on map
+ggRGB(bruce_map, r = 1, g = 2, b = 3) +
+  geom_sf(data = camping, aes(fill = park_type), size = 5, shape = 21) +
+  scale_fill_manual(values = c("green4", "dodgerblue4"), 
+                    breaks = c("National", "Provincial"), name = "Park Type")+
+  theme_void(base_size = 15) +
+  theme(legend.position = c(0.8, 0.8))
+
+
+```
+
